--- a/src/app/admin/account/master/ledger-accounts/ledger-accounts.component.html
+++ b/src/app/admin/account/master/ledger-accounts/ledger-accounts.component.html
@@ -54,7 +54,7 @@
                         <td class="inline_edit">
                             <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
                         </td>
-                        <td>
+                        <td class="action">
                             <button mat-icon-button color="primary" type="button" class="sm_btn mr-2" (click)="saveLedger(item, i)">
                                 <mat-icon>save</mat-icon>     
                             </button>
