--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,21 +1,21 @@
 <div class="row buttons_row">
     <div class="col-lg-3 col-md-6">
-        <div class="clickBox">
+        <div class="clickBox" routerLink="/admin/order/new">
             Create New Order
         </div>
     </div>
     <div class="col-lg-3 col-md-6">
-        <div class="clickBox">
+        <div class="clickBox" routerLink="/admin/tables">
             View Table
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-3 col-md-6" routerLink="/admin/reports">
         <div class="clickBox">
             Reports
         </div>
     </div>
     <div class="col-lg-3 col-md-6">
-        <div class="clickBox">
+        <div class="clickBox" routerLink="/admin/products">
             Products
         </div>
     </div>
