--- a/src/app/admin/layout/component/change-password/change-password.component.html
+++ b/src/app/admin/layout/component/change-password/change-password.component.html
@@ -1,18 +1,20 @@
-<div class="popup_formWrapper">
-    <h3>Change Password</h3>
-    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
-        <mat-label>Old Password</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
-        <mat-label>New Password</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
-        <mat-label>Confirm Password</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-</div>
-<div class="popup_Btnfooter text-center">
-    <button mat-raised-button color="primary" class="ew-100">Save</button>
-</div>
+<form [formGroup]="form" (submit)="changePassword($event)">
+    <div class="popup_formWrapper">
+        <h3>Change Password</h3>
+        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+            <mat-label>Old Password</mat-label>
+            <input matInput type="password" formControlName="oldPassword">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+            <mat-label>New Password</mat-label>
+            <input matInput type="password" formControlName="password">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput type="password" formControlName="confirmPassword">
+        </mat-form-field>
+    </div>
+    <div class="popup_Btnfooter text-center">
+        <button mat-raised-button color="primary" type="submit" class="ew-100">Save</button>
+    </div>
+</form>
