--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -24,13 +24,13 @@
                     </mat-menu>
                 </li>
                 <li>
-                    <div class="profile_box" [matMenuTriggerFor]="profileMenu" style="background-image: url('assets/images/user.png');"></div>
+                    <div class="profile_box" [matMenuTriggerFor]="profileMenu" [ngStyle]="{'background-image': imgSrc}"></div>
                     <mat-menu #profileMenu="matMenu" class="notification_menu profile_menu">
-                        <h4>Jone Doe</h4>
+                        <h4>{{ currentUser?.user.firstName }} {{ currentUser?.user.lastName }}</h4>
                         <ul class="list-unstyled mb-0">
-                            <button mat-menu-item (click)="changePassword()">Change Image</button>
-                            <button mat-menu-item (click)="changeProfile()">Change Password</button>
-                            <button mat-menu-item>Sign Out</button>
+                            <button mat-menu-item (click)="changeProfile()">Change Image</button>
+                            <button mat-menu-item (click)="changePassword()">Change Password</button>
+                            <button mat-menu-item  (click)="signOut()">Sign Out</button>
                         </ul>
                     </mat-menu>
                 </li>
