--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -189,6 +189,7 @@
                     &.price_td {
                         text-align: right;
                         font-size: 1.6rem;
+                        padding: 0;
                     }
                 }
                 &:first-child {
