--- a/src/app/shared/components/confirm-popup/confirm-popup.component.html
+++ b/src/app/shared/components/confirm-popup/confirm-popup.component.html
@@ -1,5 +1,5 @@
 <div class="confirmBox_wrapper">
-    <p>Are you sure you want to delete this record.</p>
+    <p>{{ message }}</p>
     <div class="button_wrapper mt-20 text-center">
         <button mat-raised-button color="primary" class="mx-10 ew-mn-100" (click)="closePopup(true)">Ok</button>
         <button mat-raised-button color="warn" class="mx-10 ew-mn-100" (click)="closePopup(false)">Cancel</button>
