--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -21,8 +21,8 @@
                 <mat-icon>view_module</mat-icon> <span class="d-inline-block ml-3">Tables</span>
             </a>
         </li>
-        <li>
-            <a href="javascript:;" matRipple [matRippleUnbounded]="false">
+        <li routerLinkActive="active">
+            <a href="javascript:;" routerLink="/admin/reports" matRipple [matRippleUnbounded]="false">
                 <mat-icon>pie_chart</mat-icon> <span class="d-inline-block ml-3"> Reports</span>
             </a>
         </li>
