--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,64 +1,58 @@
-<div class="page_header d-flex mb-4">
-    <h2 class="header_title">Orders</h2>
-    <div class="ml-auto">
-        <mat-form-field appearance="outline" class="mr-10 pb-0">
-            <mat-label>Search</mat-label>
-            <input matInput placeholder="Placeholder">
-            <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
-        <button mat-raised-button class="mr-10" color="primary" routerLink="/admin/order/new">Add New</button>
-        <button mat-mini-fab color="primary" (click)="filterOn = !filterOn" class="ml-auto">
-            <mat-icon>filter_list</mat-icon>
-        </button>
-    </div>
-</div>
-<mat-card *ngIf="filterOn">
-    <div class="search_outerWrapper">
-        <div class="row gutters-10">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
-                    <mat-label>Status</mat-label>
-                    <mat-select>
-                        <mat-option value="option">Option</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
-                    <mat-label>Order Type</mat-label>
-                    <mat-select>
-                        <mat-option value="option">Option</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
-                    <mat-label>Date range</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate placeholder="Start date">
-                        <input matEndDate placeholder="End date">
-                    </mat-date-range-input>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
-                    <mat-label>Category</mat-label>
-                    <mat-select>
-                        <mat-option value="option">Option</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
+<form [formGroup]="filterForm">
+    <div class="page_header d-flex mb-4">
+        <h2 class="header_title">Orders</h2>
+        <div class="ml-auto">
+            <mat-form-field appearance="outline" class="mr-10 pb-0">
+                <mat-label>Search</mat-label>
+                <input matInput placeholder="Placeholder" formControlName="searchString">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+            <button mat-raised-button class="mr-10" color="primary" routerLink="/admin/order/new">Add New</button>
+            <button mat-mini-fab color="primary" (click)="filterOn = !filterOn" class="ml-auto">
+                <mat-icon>filter_list</mat-icon>
+            </button>
         </div>
     </div>
-</mat-card>
+    <mat-card *ngIf="filterOn">
+        <div class="search_outerWrapper">
+            <div class="row gutters-10">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Status</mat-label>
+                        <mat-select formControlName="orderStatus" multiple>
+                            <mat-option *ngFor="let item of orderStatus" [value]="item">{{ item|titlecase }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Order Type</mat-label>
+                        <mat-select formControlName="typeOfOrder" multiple>
+                            <mat-option *ngFor="let item of orderTypeList" [value]="item.id">{{ item.typeName }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Date range</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                            <input matStartDate placeholder="Start date" formControlName="startDate">
+                            <input matEndDate placeholder="End date" formControlName="endDate">
+                        </mat-date-range-input>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                    </mat-form-field>
+                </div>
+            </div>
+        </div>
+    </mat-card>
+</form>
 
 <div class="table_outerWrapper mat-elevation-z2 mt-20">
     <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
@@ -70,7 +64,7 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="orderId">
+        <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-130"> Order No </th>
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
