--- a/src/app/admin/report-manager/report-manager.component.html
+++ b/src/app/admin/report-manager/report-manager.component.html
@@ -1,1 +1,99 @@
-<p>report-manager works!</p>
+<form [formGroup]="filterForm" (submit)="getOrderList($event)">
+    <div class="page_header d-flex mb-4">
+        <h2 class="header_title">Order Report</h2>
+        <div class="ml-auto">
+            <mat-form-field appearance="outline" class="mr-10 pb-0">
+                <mat-label>Search</mat-label>
+                <input matInput placeholder="Placeholder" formControlName="searchString">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+            <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
+                <mat-icon>import_export</mat-icon>
+            </button>
+        </div>
+    </div>
+    <mat-card>
+        <div class="search_outerWrapper">
+            <div class="row gutters-10">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Date range</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                            <input matStartDate placeholder="Start date" formControlName="startDate">
+                            <input matEndDate placeholder="End date" formControlName="endDate">
+                        </mat-date-range-input>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Status</mat-label>
+                        <mat-select formControlName="orderStatus" multiple>
+                            <mat-option *ngFor="let item of orderStatus" [value]="item">{{ item|titlecase }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+                    <mat-form-field appearance="outline" class="w-100 pb-0">
+                        <mat-label>Order Type</mat-label>
+                        <mat-select formControlName="typeOfOrder" multiple>
+                            <mat-option *ngFor="let item of orderTypeList" [value]="item.id">{{ item.typeName }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-6 col-12">
+                    <button mat-raised-button class="mr-10" type="submit" color="primary" >Generate</button>
+                </div>
+
+            </div>
+        </div>
+    </mat-card>
+</form>
+
+
+<div class="table_outerWrapper mat-elevation-z2 mt-20">
+    <table mat-table #reportTable [dataSource]="dataSource" class="w-100">
+        <!-- Position Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-icon-button [matMenuTriggerFor]="moreOption">
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" [routerLink]="['/admin/order/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
+                    <button mat-menu-item type="button"><mat-icon>delete</mat-icon>Delete</button>
+                </mat-menu>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef class="ew-130"> Order No </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="orderType">
+            <th mat-header-cell *matHeaderCellDef class="ew-200"> Order Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.order_type.typeName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="orderAmount">
+            <th mat-header-cell *matHeaderCellDef> Order Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.orderAmount}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="orderStatus">
+            <th mat-header-cell *matHeaderCellDef class="ew-200"> Order Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.orderStatus}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="created_at">
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Ordered At </th>
+            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY'}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
