table view updated

--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
             </a>
         </li>
         <li routerLinkActive="active">
-            <a href="javascript:;" matRipple [matRippleUnbounded]="false">
+            <a href="javascript:;" routerLink="/admin/tables" matRipple [matRippleUnbounded]="false">
                 <mat-icon>view_module</mat-icon> <span class="d-inline-block ml-3">Tables</span>
             </a>
         </li>
